@@ -12,7 +12,7 @@ Object < #Behavior
 	<primitive: 70>
 
 - superclass
-	^ superclass.
+	<primitive: 219>
 
 - inheritsFrom: aClass
 "	| aSuperclass |
@@ -23,3 +23,9 @@ Object < #Behavior
 			aSuperclass := aSuperclass superclass].
 	^ false
 "
+
+- canUnderstand: selector
+  "Answer whether the receiver can respond to the message whose selector
+  is the argument. The selector can be in the method dictionary of the
+  receiver's class or any of its superclasses."
+  <primitive: 220>
